--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/server.ts",
+    "start": "node build/server.js",
     "seed": "ts-node --transpile-only src/seeders/index.ts",
     "build": "tsc"
   },
